# ai-architect-labs

./: .env.example  .gitignore  BUILD_YOUR_CORPUS.md  CLAUDE.md  README.md  pyproject.toml
labs/: lab_1.py  lab_2.py  lab_3.py  lab_4.py  lab_5.py  lab_6.py  lab_7.py  lab_8.py
labs/mcp_server/: .mcp.json  README.md  auth.ts  harness.ts  package.json  server.ts  tsconfig.json
mai_rag/: __init__.py  acl.py  baseline.py  bridge.py  corpus.py  golden.py  llm.py  mcp_guard.py  store.py  viz.py
mai_rag/data/: COMPANY_BIBLE.md  eu_ai_act_map.json  golden_attacks.json  golden_seed_action.json  golden_seed_catalog.json  golden_seed_hard.json  governance_canvas.json
mai_rag/data/catalog/: agent-agent-to-agent-communication.md  agent-agentic-reasoning-patterns.md  agent-architecture.md  agent-build-your-first-agent.md  agent-build-your-first-chatbot.md  agent-capabilities-spectrum.md  agent-checkpoints.md  agent-consensus-and-voting.md  agent-crewai-and-autogen.md  agent-delegation-and-specialization.md  agent-handoffs.md  agent-human-in-the-loop.md  agent-langgraph-and-frameworks.md  agent-mcp-model-context-protocol.md  agent-multi-agent-coordination.md  (+121 more)
mai_rag/evals/: __init__.py  base.py  native.py  ragas_backend.py  safety.py
mai_rag/guardrails/: __init__.py  acs.py  compliance.py
mai_rag/hitl/: __init__.py  bridge.py  checkpoint.py  queue.py  spectrum.py
notebooks/: 01_evaluation_first.ipynb
pillars/: README.md
pillars/01-advanced-rag/: README.md
pillars/02-evals-and-benchmarks/: README.md
pillars/03-mcp-engineering/: README.md
pillars/04-trust-and-production/: README.md
(+147 files in other folders)
